fix spacing bug for answer wrong link on questions result page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1801,6 +1801,11 @@ div.correct_question_icon {
   }
 }
 
+a.red_button.medium.question_result_button {
+  float: none;
+  display: inline-block;
+}
+
 a.red_button.medium.next_question_button {
   background-image: image-url('button_icons.png');
   background-repeat: no-repeat;
